--- a/www/index.html
+++ b/www/index.html
@@ -47,12 +47,82 @@
             <div>
                 <strong>Kvalitní noční záběry z dronu a RAW</strong> Vylepšený algoritmus redukce šumu nočních snímků u modelu Mini 4 Pro vám pomůže pořizovat <b>jasnější a kvalitnější záběry, i za šera nebo v noci.</b> Každý drobný detail navíc můžete zaznamenat díky <b>48MP RAW</b> a nové generaci SmartPhoto, která kombinuje <b>HDR zobrazování,</b> rozpoznávání scén a mnoho dalších funkcí.
             </div>
+            <div>
+                <h3>
+                    Chytré režimy pořizování záběrů
+                </h3>
+                <p>
+                    Mini 4 Pro nabízí 3 způsoby, jak můžete snadno pořídit snímky, které potřebujete: <b>Spotlight, Point of Interest</b> a novou revoluční funkci <b>ActiveTrack 360°</b> s vylepšenými možnostmi sledování objektu. K dispozici jsou vám jako obvykle také <b>automatické chytré režimy.</b>
+                </p>
+                <ol>
+                    <li>
+                        <strong>MasterShots</strong>
+                        <p>nabízí dynamické šablony pro pohyby kamerou přizpůsobené pro portrétní snímky, záběry zblízka, nebo z velké vzdálenosti.</p>
+                    </li>
+                    <li>
+                        <strong>QuickShots </strong>
+                        <p>nabízí režimy Dronie, Circle, Helix, Rocket, Boomerang a Asteroid.</p>
+                    </li>
+                    <li>
+                        <strong>Hyperlapse</strong>
+                        <p>nabízí režimy Free, Waypoint, Circle a Course Lock s neomezenou dobou snímání a podporuje také vytváření kompozice během natáčení.</p>
+                    </li>
+                    <li>
+                        <strong>Panorama</strong>
+                        <p>podporuje 180°, Wide, Vertical a Sphere panoramatické snímky.</p>
+                    </li>
+                </ol>
+            </div>
         </section>
-        
+        <section class="page__section">
+            <h2>
+                Dostupná provedení
+            </h2>
+            <div>
+                <strong>
+                    Dron DJI Mini 4 Pro + RC-N2
+                </strong>
+                <p>
+                    V tomto balíčku získáte dron DJI Mini 4 Pro se základním ovladačem DJI RC-NC.
+                </p>
+                <a>
+                    zakoupit nyní
+                </a>
+            </div>
+            <div>
+                <strong>
+                    Dron DJI Mini 4 Pro Fly More Combo + DJI RC 2
+                </strong>
+                <p>
+                    Dron DJI Mini 4 Pro s ovladačem s vestavěným dispejem DJI RC 2 a dalším praktickým příslušenstvím.
+                </p>
+                <a>
+                    zakoupit nyní
+                </a>
+            </div>
+            <div>
+                <h3>
+                    Mini to the <span>Max</span>
+                </h3>
+                <p>
+                    Nakupte nyní ve verzi Fly More Combo s 10% slevou za jedinečnou cenu 28 990 Kč.
+                </p>
+                <a>
+                    zakoupit se slevou
+                </a>
+            </div>
+        </section>
+        <section class="page__section">
+            <h2>
+                Galerie
+            </h2>
+        </section>
 
     </main>
     <footer class="page__footer">
-       
+       <a>
+        www.dji.com
+       </a>
     </footer>
 </body>
 </html>
