--- a/www/index.html
+++ b/www/index.html
@@ -54,7 +54,7 @@
                 <p>
                     Mini 4 Pro nabízí 3 způsoby, jak můžete snadno pořídit snímky, které potřebujete: <b>Spotlight, Point of Interest</b> a novou revoluční funkci <b>ActiveTrack 360°</b> s vylepšenými možnostmi sledování objektu. K dispozici jsou vám jako obvykle také <b>automatické chytré režimy.</b>
                 </p>
-                <ol>
+                <ul>
                     <li>
                         <strong>MasterShots</strong>
                         <p>nabízí dynamické šablony pro pohyby kamerou přizpůsobené pro portrétní snímky, záběry zblízka, nebo z velké vzdálenosti.</p>
@@ -71,7 +71,7 @@
                         <strong>Panorama</strong>
                         <p>podporuje 180°, Wide, Vertical a Sphere panoramatické snímky.</p>
                     </li>
-                </ol>
+                </ul>
             </div>
         </section>
         <section class="page__section">
@@ -79,6 +79,14 @@
                 Dostupná provedení
             </h2>
             <div>
+                <figure>
+                    <picture>
+                        <source srcset="./images/dron-v-letu.avif" type="image/avif" height="683" width="1024">
+                        <source srcset="./images/dron-v-letu-.webp" type="image/webp" height="683" width="1024">
+                        <img src="./images/dron-v-letu.jpg" alt="Pohled zpředu na drona DJI Mini 4 PrO" height="683" width="1024" class="img-responsive">
+                    </picture>
+                    <figcaption>Pohled zpředu na drona DJI Mini 4 PrO</figcaption>
+                </figure>
                 <strong>
                     Dron DJI Mini 4 Pro + RC-N2
                 </strong>
