--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="page">
     <header class="page__header">
-        <a href="./" class="page__logo"><span>DJI</span></a>
+        <div class="page__logo-container"><a href="./" class="page__logo"><span>DJI</span></a></div>
         <div class="page__intro">
             <h1>
                 Dron DJI Mini 4 Pro 
@@ -20,7 +20,7 @@
                 funkcí ActiveTrack 360° s novým režimem Trace a podporou přenosu v rozlišení FullHD na vzdálenost až 20 km, 
                 dokáže oslovit nejen začátečníky, ale i náročnější uživatele kvadrokoptér. 
             </p>
-            <a class="button" href="#">
+            <a class="button button--white" href="#">
                 prohlédnout funkce
             </a> 
         </div>
@@ -39,7 +39,7 @@
             <figure>
                 <picture>
                     <source srcset="./images/dron-v-letu.avif" type="image/avif" height="683" width="1024">
-                    <source srcset="./images/dron-v-letu-.webp" type="image/webp" height="683" width="1024">
+                    <source srcset="./images/dron-v-letu.webp" type="image/webp" height="683" width="1024">
                     <img src="./images/dron-v-letu.jpg" alt="Pohled zpředu na drona DJI Mini 4 PrO" height="683" width="1024" class="img-responsive">
                 </picture>
                 <figcaption>Pohled zpředu na drona DJI Mini 4 PrO</figcaption>
@@ -79,14 +79,12 @@
                 Dostupná provedení
             </h2>
             <div>
-                <figure>
+                <div>
                     <picture>
-                        <source srcset="./images/dron-v-letu.avif" type="image/avif" height="683" width="1024">
-                        <source srcset="./images/dron-v-letu-.webp" type="image/webp" height="683" width="1024">
-                        <img src="./images/dron-v-letu.jpg" alt="Pohled zpředu na drona DJI Mini 4 PrO" height="683" width="1024" class="img-responsive">
+                        <source srcset="./images/dron-DJI-Mini-4-Pro-RC-N2.webp" type="image/webp" height="488" width="905">
+                        <img src="./images/dron-DJI-Mini-4-Pro-RC-N2.jpg" alt="Dron DJI Mini 4 Pro + RC-N2" height="488" width="905" class="img-responsive">
                     </picture>
-                    <figcaption>Pohled zpředu na drona DJI Mini 4 PrO</figcaption>
-                </figure>
+                </div>
                 <strong>
                     Dron DJI Mini 4 Pro + RC-N2
                 </strong>
@@ -98,6 +96,12 @@
                 </a>
             </div>
             <div>
+                <div>
+                    <picture>
+                        <source srcset="./images/dron-DJI-Mini-4-Pro-Fly-More-Combo-DJI-RC-2.webp" type="image/webp" height="591" width="952">
+                        <img src="./images/dron-DJI-Mini-4-Pro-Fly-More-Combo-DJI-RC-2.jpg" alt="Dron DJI Mini 4 Pro Fly More Combo + DJI RC 2" height="591" width="925" class="img-responsive">
+                    </picture>
+                </div>
                 <strong>
                     Dron DJI Mini 4 Pro Fly More Combo + DJI RC 2
                 </strong>
