--- a/www/index.html
+++ b/www/index.html
@@ -14,14 +14,14 @@
             <h1>
                 Dron DJI Mini 4 Pro 
             </h1>
-            <p>
+            <p class="intro__text">
                 Pořizujte dechberoucí letecké záběry s dosud nejpokročilejším dronem DJI s minikamerou &mdash; Mini 4 Pro. 
                 Díky výkonným zobrazovacím funkcím, všesměrovému snímání překážek, 
                 funkcí ActiveTrack 360° s novým režimem Trace a podporou přenosu v rozlišení FullHD na vzdálenost až 20 km, 
                 dokáže oslovit nejen začátečníky, ale i náročnější uživatele kvadrokoptér. 
             </p>
             <a class="button button--white" href="#">
-                prohlédnout funkce
+                <b>prohlédnout funkce</b>
             </a> 
         </div>
     </header>
