--- a/www/index.html
+++ b/www/index.html
@@ -42,10 +42,10 @@
                     <source srcset="./images/dron-v-letu.webp" type="image/webp" height="683" width="1024">
                     <img src="./images/dron-v-letu.jpg" alt="Pohled zpředu na drona DJI Mini 4 PrO" height="683" width="1024" class="img-responsive">
                 </picture>
-                <figcaption>Pohled zpředu na drona DJI Mini 4 PrO</figcaption>
+                <figcaption class="img__figcaption">Pohled zpředu na drona DJI Mini 4 Pro</figcaption>
             </figure>
-            <div>
-                <strong>Kvalitní noční záběry z dronu a RAW</strong> Vylepšený algoritmus redukce šumu nočních snímků u modelu Mini 4 Pro vám pomůže pořizovat <b>jasnější a kvalitnější záběry, i za šera nebo v noci.</b> Každý drobný detail navíc můžete zaznamenat díky <b>48MP RAW</b> a nové generaci SmartPhoto, která kombinuje <b>HDR zobrazování,</b> rozpoznávání scén a mnoho dalších funkcí.
+            <div class="element--highlight">
+                <strong class="page__subtitle">Kvalitní noční záběry z dronu a RAW</strong> Vylepšený algoritmus redukce šumu nočních snímků u modelu Mini 4 Pro vám pomůže pořizovat <b>jasnější a kvalitnější záběry, i za šera nebo v noci.</b> Každý drobný detail navíc můžete zaznamenat díky <b>48MP RAW</b> a nové generaci SmartPhoto, která kombinuje <b>HDR zobrazování,</b> rozpoznávání scén a mnoho dalších funkcí.
             </div>
             <div>
                 <h3>
